--- a/src/main/webapp/pages/credit/pricemanager/price_edit.html
+++ b/src/main/webapp/pages/credit/pricemanager/price_edit.html
@@ -11,7 +11,7 @@ var oper = {
 			return false;
 		}
 		id = id || '0';
-		var url = 'credit/pricemanager/save/'+id;
+		var url = 'credit/pricemanager/'+id;
 		form1.action = url;
 		form1.submit();
 		return true;
