--- a/src/main/webapp/pages/credit/pricemanager/price_view.html
+++ b/src/main/webapp/pages/credit/pricemanager/price_view.html
@@ -9,59 +9,37 @@ var bodyContent = {
 	<!-- 数据列表 -->
 		<table class="table">
 			<tr>
-				<td>类型</td>
-				<td>
-					<select disabled="disabled"  class="form-control">
-						${optionList }
-					</select>
-				</td>
+				<td>报告类型</td>
+				<td>${model.report_type}</td>
 			</tr>
 			<tr>
-				<td>名称</td>
-				<td>${item.detail_name}</td>
+				<td>报告速度</td>
+				<td>${model.order_speed}</td>
 			</tr>
-			
-			
-			<!-- start -->
 			<tr>
-				<td>详情名英文</td>
-				<td>${item.detail_name_en}</td>
+				<td>国家</td>
+				<td>${model.country_type}</td>
 			</tr>
 			
 			<tr>
 				<td>详情类型</td>
 				<td>${item.detail_type}</td>
 			</tr>
-			
 			<tr>
-				<td>详情状态</td>
-				<td>${item.detail_state}</td>
-			</tr>
-			
-			<tr>
-				<td>详情内容</td>
-				<td>${item.detail_content}</td>
-			</tr>
-			
-			<tr>
-				<td>详情标记</td>
-				<td>${item.detail_remark}</td>
-			</tr>
-			
-			<tr>
-				<td>创建日期</td>
-				<td>${item.create_time}</td>
-			</tr>
-					
-			
-			<!-- end -->
-			<tr>
-				<td>编号</td>
-				<td>${item.detail_code}</td>
+				<td>订单类型</td>
+				<td>${model.order_type}</td>
 			</tr>
 			<tr>
-				<td>排序号</td>
-				<td>${item.detail_sort!0}</td>
+				<td>报告点数</td>
+				<td>${model.points}</td>
+			</tr>
+			<tr>
+				<td>报告价格</td>
+				<td>${model.price}</td>
+			</tr>
+			<tr>
+				<td>币种</td>
+				<td>${model.currency}</td>
 			</tr>
 		</table>
 		
