--- a/src/main/webapp/pages/credit/reportType/reportType_view.html
+++ b/src/main/webapp/pages/credit/reportType/reportType_view.html
@@ -33,6 +33,10 @@ var bodyContent = {
 				<td>备注</td>
 				<td>${model.remarks!''}</td>
 			</tr>
+			<tr>
+				<td>创建日期</td>
+				<td >${model.create_date,dateFormat="yyyy-MM-dd HH:mm:ss"}</td>
+			</tr>
 	</table>
 	
 	<div style="height: 50px;clear: both;">&nbsp;</div>
