增加order_no字段的增删查改功能

--- a/src/main/webapp/pages/credit/reportType/reportType_edit.html
+++ b/src/main/webapp/pages/credit/reportType/reportType_edit.html
@@ -55,12 +55,12 @@ var bodyContent = {
 					</td>
 				</tr>
 				
-				<!-- <tr>
+				<tr>
 					<td>排序</td>
 					<td>
-					<input class="form-control" type="text" name="model.order_no" value="${model.order_no }"  />
+					<input class="form-control" type="text" name="model.order_no" valid='vnum_y' validname='排序' value="${model.order_no }"  />
 					</td>
-				</tr> -->
+				</tr> 
 				<tr>
 					<td>备注</td>
 					<td>
