--- a/src/main/webapp/pages/credit/reportType/reportType_list.html
+++ b/src/main/webapp/pages/credit/reportType/reportType_list.html
@@ -60,10 +60,7 @@
 
 	<div class="tableSearch">
 		<% //查询列表 %>
-		<select name="searchType" class="form-control form-group" style="width: 110px;font-size: 10px;">
-					<option value="0">模糊搜索</option>
-					<option value="1">精确搜索</option>
-		</select>
+		搜索内容
 		<div class="form-group">
 			<input class="form-control" type="text" name="keyWord"
 				value="${keyWord!''}" placeholder="请输入关键字" required='required' />
@@ -89,6 +86,7 @@
 				<th name="t.name_trad" class="sorting">报告繁体名称</th>
 				<th name="t.tpl_path" class="sorting">报告路径</th>
 				<th name="u.realname" class="sorting">创建人</th>
+				<th name="t.order_no" class="sorting">排序</th>
 				<th name="t.remarks" class="sorting">备注</th>
 				<th name="t.create_date" class="sorting">创建日期</th>
 				<th>操作</th>
@@ -129,9 +127,9 @@
 					${strutil.subStringTo(item.realname, 0, 25)}... <% } else { %>
 					${item.realname} <% } %></td>
 
-				<!-- <td title="${item.order_no!}">
+				<td title="${item.order_no!}">
 					${item.order_no!''}
-				</td> -->
+				</td>
 
 				<td title="${item.remarks!}"><% if
 					(strutil.length(item.remarks) > 25) { %>
