--- a/src/main/webapp/pages/credit/custom/custom_edit.html
+++ b/src/main/webapp/pages/credit/custom/custom_edit.html
@@ -13,7 +13,7 @@ var headContent = {
 				return false;
 			}
 			id = id || '0';
-			var url = 'credit/whilte/save/'+id;
+			var url = 'credit/custom/save/'+id;
 			form1.action = url;
 			form1.submit();
 			return true;
