--- a/src/main/webapp/pages/credit/orderproperties/orderproperties_list.html
+++ b/src/main/webapp/pages/credit/orderproperties/orderproperties_list.html
@@ -62,7 +62,7 @@
 	<div class="tableSearch">
 		<% //查询列表 %>
 		<div class="form-group">
-			 <label  class="control-label">关键词：</label>
+			 <label  class="control-label">名称：</label>
 			<input class="form-control" type="text" name="keyWord"
 				value="${keyWord!''}" placeholder="请输入关键字" required='required' />
 		</div>
