--- a/src/main/webapp/pages/admin/ordermanager/order_view.html
+++ b/src/main/webapp/pages/admin/ordermanager/order_view.html
@@ -7,34 +7,7 @@ include("/pages/template/head.html"){}
 
 <script type="text/javascript">
 
-   /*  function oper_reset(userid){
-        if(userid <= 0){
-            alert('数据错误，请联系管理员');
-            return;
-        }
-
-        var title = '确认要修改用户密码么，修改后将无法修复？';
-        Confirm(title, function() {
-            jQuery.ajax({
-                type:'POST',
-                url:'admin/person/reset',
-                data:{"model.userid":userid},
-                success:function(data){
-                    if(data.status==1){
-                        $('#secretKey').html(data.md5Pwd);
-                        Alert('重置成功，请记住密码（'+data.pwd+'）');
-                    } else {
-                        Alert('重置失败：'+data.msg);
-                    }
-                },
-                error:function(html){
-                    var flag = (typeof console != 'undefined');
-                    if(flag) console.log("服务器忙，提交数据失败，代码:" +html.status+ "，请联系管理员！");
-                    alert("服务器忙，提交数据失败，请联系管理员！");
-                }
-            });
-        });
-    } */
+  
 </script>
 
 <%
@@ -45,97 +18,113 @@ var bodyContent = {
 	<table class="table">
 		<%  // 列表头部 %>
 		<tr>
+			<td>客户ID</td>
+			<td>${model.custom_id}</td>
+		</tr>
+		<tr>
+			<td>客户用户名</td>
+			<td>
+				${model.customName}
+			</td>
+		</tr>
+		<tr>
+			<td>接单日期</td>
+			<td>
+				${model.receiver_date}
+			</td>
+		</tr>
+		<tr>
+			<td>地区</td>
+			<td>
+	   			${model.continentName}
+			</td>
+		</tr>
+		<tr>
+			<td>国家</td>
+			<td>
+	   			${model.countryName}
+			</td>
+		</tr>
+		<tr>
+			<td>报告类型</td>
+			<td>
+	   			${model.reportType}
+			</td>
+		</tr>
+		<tr>
+			<td>报告速度</td>
+			<td>
+	   			${model.reportSpeed}
+			</td>
+		</tr>
+		<tr>
+			<td>报告用时</td>
+			<td>
+	   			${model.user_time}
+			</td>
+		</tr>
+		<tr>
+			<td>费用</td>
+			<td>
+	   			${model.price}
+			</td>
+		</tr>
+		<tr>
+			<td>报告语言</td>
+			<td>
+	   			${model.reportLanguage}
+			</td>
+		</tr>
+		<tr>
+			<td>公司ID</td>
+			<td>
+	   			${model.company_id}
+			</td>
+		</tr>
+		<tr>
+			<td>公司名称</td>
+			<td>
+	   			${model.companyName}
+			</td>
+		</tr>
+		<tr>
+			<td>公司英文名称</td>
+			<td>
+	   			${model.englishName}
+			</td>
+		</tr>
+		<tr>
 			<td>订单号</td>
 			<td>${model.id}</td>
 		</tr>
 		<tr>
-			<td>订单日期</td>
-			<td>${model.receiver_date,dateFormat="yyyy-MM-dd"}</td>
-		</tr>
-		<tr>
-			<td>客户代码</td>
-			<td>${model.custom_id}</td>
-		</tr>
-		<tr>
 			<td>处理状态</td>
-			<td>${model.status}</td>
-		</tr>
-		<tr>
-			<td>国家</td>
-			<td>${model.country}</td>
-		</tr>
-		<tr>
-			<td>报告员</td>
-			<td>${model.userName}</td>
-		</tr>
-		<tr>
-		<!--
-        <tr>
-            <td>密码</td>
-            <td>${model.password}</td>
-        </tr>
-         -->
-		<!-- <% if(model.usertype==5) { %>
-		<tr>
-			<td>秘钥</td>
-			<td id="secretKey">${model.secretKey}</td>
-		</tr>
-		<%	} %>
-		<tr>
-			<td>类型</td>
 			<td>
-				<% if(model.usertype==1) { %>
-				管理员
-				<%	} %>
-				<% if(model.usertype==2) { %>
-				普通用户
-				<%	} %>
-				<% if(model.usertype==3) { %>
-				前台用户
-				<%	} %>
-				<% if(model.usertype==4) { %>
-				第三方用户
-				<%	} %>
-				<% if(model.usertype==5) { %>
-				API用户
-				<%	} %>
-				<% if(model.usertype==9) { %>
-				其他用户
-				<%	} %>
-			</td>
+				<%if(model.status=='0'){%>
+					提交订单
+				<%}%>
+				<%if(model.status=='1'){%>
+					订单分配
+				<%}%>
+				<%if(model.status=='2'){%>
+					处理中
+				<%}%>
+				<%if(model.status=='3'){%>
+					按照流程处理完毕
+				<%}%>
+				<%if(model.status=='4'){%>
+					订单取消
+				<%}%>
+				<%if(model.status=='5'){%>
+					有相同报告,订单结束
+				<%}%>			
+		</td>
 		</tr>
-		<tr>
-			<td>Email</td>
-			<td>${model.email}</td>
-		</tr>
-		<tr>
-			<td>手机号</td>
-			<td>${model.tel}</td>
-		</tr>
-		<tr>
-			<td>地址</td>
-			<td>${model.address}</td>
-		</tr>
-		<tr>
-			<td>头像地址</td>
-			<td>${model.title_url}</td>
-		</tr>
-		<tr>
-			<td>说明</td>
-			<td title="${model.remark}">
-				<% if (strutil.length(model.remark) > 6) { %>
-				${strutil.subStringTo(model.remark, 0, 6)}...
-				<%	} else {%>
-				${model.remark }
-				<% } %>
-			</td>
-		</tr> -->
 	</table>
 
 	<div style="height: 50px;clear: both;">&nbsp;</div>
 	<nav class="navbar navbar-default navbar-fixed-bottom">
 		<div class="container" style="padding: 5px 0px 5px 0px;text-align: center;">
-			<button class="btn btn-danger" onclick="oper_reset(${model.userid!'0'});return false;">重置密码</button>
 			<button class="btn btn-default" onclick="closeIframe();return false;">关 闭</button>
 		</div>
 	</nav>
