--- a/src/main/webapp/pages/credit/pricemanager/price_edit.html
+++ b/src/main/webapp/pages/credit/pricemanager/price_edit.html
@@ -74,7 +74,7 @@ var bodyContent = {
 			<td>
 			  <select name="model.order_speed" class="form-control" style="width: 200px;">
 					${orderspeed!}
-				</select> 
+				</select>
 			</td>
 		</tr>
 		<tr>
@@ -86,15 +86,15 @@ var bodyContent = {
 			</td>
 		</tr>
 		<tr>
-			<td>国家</td>
-			<td><select name="model.country_type" class="form-control" style="width: 200px;">
-						${countrytype!}
-			</select> </td>
-		</tr>
-		<tr>
 			<td>订单类型</td>
 			<td>  <select name="model.order_type" class="form-control" style="width: 200px;">
 						${ordertype!}
+			</select> </td>
+		</tr>
+			<tr>
+			<td>国家</td>
+			<td><select name="model.country_type" class="form-control" style="width: 200px;">
+						${countrytype!}
 			</select> </td>
 		</tr>
 		<tr>
@@ -102,7 +102,6 @@ var bodyContent = {
 			<td><input type="text" name="model.points" class="form-control" 
 				value="${model.points!}" /></td>
 		</tr>
-		
 		<tr>
 			<td>报告价格</td>
 			<td><input type="text" name="model.price" class="form-control" 
@@ -119,16 +118,13 @@ var bodyContent = {
 					${usabled!}
 			</select></td>
 		</tr>
-				<tr>
+		<tr>
 			<td>创建日期</td>
 			<td><input type="text" name="model.create_date" class="form-control" 
 				value="${model.create_date}" validname="创建日期" 
-					 placeholder="创建日期" onfocus="WdatePicker({dateFmt:'yyyy-MM-dd'})"/></td>
+					 placeholder="创建日期"  readonly="readonly" onfocus="WdatePicker({dateFmt:'yyyy-MM-dd'})"/></td>
 	</tr>
-			</tr>
-			<tr>
-			
-		</tr>
+</tr>
 	</table>
 	<div style="height: 50px;clear: both;">&nbsp;</div>
 	<nav class="navbar navbar-default navbar-fixed-bottom">
