--- a/src/main/webapp/pages/credit/whilte/whilte_edit.html
+++ b/src/main/webapp/pages/credit/whilte/whilte_edit.html
@@ -1,4 +1,4 @@
-<% var upload_busType = tempDict.getSysDictDetailByType('upload_busType'); %>
+<% var usabled = tempDict.getSysDictDetailByType('usabled'); %>
 <% 
 DIRECTIVE SAFE_OUTPUT_OPEN;
 var headContent = {
@@ -69,12 +69,34 @@ var bodyContent = {
 				</tr>
 				<tr>
 					<td>报告类型</td>
+					<!-- <input class="form-control" type="text" name="model.report_id" value="${model.report_id}" /> -->
 					<td>
-					<input class="form-control" type="text" name="model.report_id" value="${model.report_id}" />
+						<div class="form-group">
+						<select name="model.report_id" class="form-control" >
+						 <% for(item in reporttype){ %>
+						 	<% if((model.report_id+"")==(item.id+"")){ %>
+							 	<option  m-type="${item.name_en}" selected="selected" value="${item.id}">${item.name}</option>
+							<% }else{ %>
+								<option  m-type="${item.name_en}" value="${item.id}">${item.name}</option>
+							<%}%>
+						 	
+						  <% } %>
+						</select>
+						</div>
+					</td>
 					</td>
 					<td>是否在用</td>
 					<td>
-					<input class="form-control" type="text" name="model.used" value="${model.used}" />
+					<!-- <input class="form-control" type="text" name="model.used" value="${model.used}" /> -->
+					<select name="model.used" class="form-control" >
+						<% for(item in usabled){ %>
+					 	<% if((model.used+"")==(item.detail_id+"")){ %>
+						 	<option  m-type="${item.detail_name_en}" selected="selected" value="${item.detail_id}">${item.detail_name}</option>
+						<% }else{ %>
+							<option  m-type="${item.detail_name_en}" value="${item.detail_id}">${item.detail_name}</option>
+						<%}%>
+					  <% } %>
+					</select>
 					</td>
 				</tr>
 				<tr>
