--- a/src/main/webapp/pages/credit/pricemanager/price_view.html
+++ b/src/main/webapp/pages/credit/pricemanager/price_view.html
@@ -20,16 +20,14 @@ var bodyContent = {
 		<tr>
 			<td>报告速度</td>
 			<td>
-			  <select name="model.order_speed" class="form-control" style="width: 200px;">
-					${model.orderspeed!}
-				</select> 
+			${model.orderSpeed!}
 			</td>
 			</tr>
 			<tr>
 			<td>报告类型</td>
 			 <td> 
 				 <select name="model.report_type" class="form-control" style="width: 200px;">
-							${reporttype!}
+							${reportType!}
 				</select> 
 			</td>
 		</tr>
@@ -39,9 +37,11 @@ var bodyContent = {
 						${ordertype!}
 			</select> </td>
 		</tr>
-			<tr>
+				<tr>
 			<td>国家</td>
-			<td>${model.country_type!}</td>
+			<td><select name="model.country_type" class="form-control" style="width: 200px;">
+						${countrytype!}
+			</select> </td>
 		</tr>
 			<tr>
 			<td>报告点数</td>
@@ -55,9 +55,11 @@ var bodyContent = {
 			<td>币种</td>
 			<td>${model.currency}</td>
 		</tr>
-			<tr>
+		<tr>
 			<td>是否禁用</td>
-			<td>${model.usabled}</td>
+			<td> <select name="model.usabled" class="form-control" style="width: 200px;">
+					${usabled!}
+			</select></td>
 		</tr>
 			<tr>
 			<td>创建日期</td>
