--- a/src/main/webapp/pages/credit/custom/custom_list.html
+++ b/src/main/webapp/pages/credit/custom/custom_list.html
@@ -96,6 +96,7 @@ var bodyContent = {
 					<th name="name" class="sorting">客户名称</th> 
 					<th name="contacts" class="sorting">联系人全称</th> 
 					<th name="contacts_short_name" class="sorting">联系人简称</th> 
+					<th name="reference_num" class="sorting">客户参考号</th> 
 					<th name="company" class="sorting">公司名称</th> 
 					<th name="address" class="sorting">地址</th> 
 					<th name="telphone" class="sorting">电话</th> 
@@ -117,6 +118,7 @@ var bodyContent = {
 					<td>
 						${item.contacts_short_name}
 					</td> 
+					<td>${item.reference_num}</td>
 					<td>
 						${item.company_id}
 					</td>  
