--- a/src/main/webapp/pages/credit/custom/custom_edit.html
+++ b/src/main/webapp/pages/credit/custom/custom_edit.html
@@ -1,4 +1,4 @@
-<% var upload_busType = tempDict.getSysDictDetailByType('upload_busType'); %>
+<% var usabled = tempDict.getSysDictDetailString('usabled',attr.ext_id!); %>
 <% 
 DIRECTIVE SAFE_OUTPUT_OPEN;
 var headContent = {
