--- a/src/main/webapp/pages/credit/pricemanager/price_view.html
+++ b/src/main/webapp/pages/credit/pricemanager/price_view.html
@@ -19,29 +19,19 @@ var bodyContent = {
 			</tr>
 		<tr>
 			<td>报告速度</td>
-			<td>
-			${model.orderSpeed!}
-			</td>
+		   <td>${model.orderSpeed!}</td>
 			</tr>
 			<tr>
 			<td>报告类型</td>
-			 <td> 
-				 <select name="model.report_type" class="form-control" style="width: 200px;">
-							${reportType!}
-				</select> 
-			</td>
+			 <td> ${model.reportType}</td>
 		</tr>
 		<tr>
 			<td>订单类型</td>
-			<td>  <select name="model.order_type" class="form-control" style="width: 200px;">
-						${ordertype!}
-			</select> </td>
+			<td> ${orderType} </td>
 		</tr>
-				<tr>
+		<tr>
 			<td>国家</td>
-			<td><select name="model.country_type" class="form-control" style="width: 200px;">
-						${countrytype!}
-			</select> </td>
+			<td>${ countryName}</td>
 		</tr>
 			<tr>
 			<td>报告点数</td>
@@ -57,9 +47,7 @@ var bodyContent = {
 		</tr>
 		<tr>
 			<td>是否禁用</td>
-			<td> <select name="model.usabled" class="form-control" style="width: 200px;">
-					${usabled!}
-			</select></td>
+			<td>${model.usabledName} </td>
 		</tr>
 			<tr>
 			<td>创建日期</td>
