--- a/src/main/webapp/pages/credit/whilte/whilte_view.html
+++ b/src/main/webapp/pages/credit/whilte/whilte_view.html
@@ -11,11 +11,11 @@ var bodyContent = {
 		<%  // 列表头部 %>
 			<tr>
 				<td>客户名称</td>
-				<td>${item.custom_id}</td>
+				<td>${item.cusName}</td>
 			</tr>
 			<tr>
 				<td>报告类型</td>
-				<td>${item.report_id}</td>
+				<td>${item.reportName}</td>
 				
 			</tr>
 			<tr>
